changed wand icon in analyse button

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -146,7 +146,7 @@
 
                 <div class="text-center mt-4">
                     <button type="submit" class="btn upload-btn px-5" id="submitBtn">
-                        Analyze Image <i class="fas fa-magic ms-2"></i>
+                        Analyze Image <i class="fa-solid fa-wand-magic-sparkles"></i>
                     </button>
                 </div>
             </form>
